@@ -12,6 +12,7 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -66,8 +67,8 @@ public class RevokeImpl extends JOCResourceImpl implements IRevoke {
             }
             DBItemJocAuditLog dbAuditlog = storeAuditLog(revokeFilter.getAuditLog(), CategoryType.DEPLOYMENT);
             Set<String> allowedControllerIds = Collections.emptySet();
-            allowedControllerIds = Proxies.getControllerDbInstances().keySet().stream()
-            		.filter(availableController -> getControllerPermissions(availableController, xAccessToken).getDeployments().getDeploy()).collect(Collectors.toSet());
+            allowedControllerIds = Proxies.getControllerDbInstances().keySet().stream().filter(availableController -> getControllerPermissions(
+                    availableController, xAccessToken).getDeployments().getDeploy()).collect(Collectors.toSet());
             String account = jobschedulerUser.getSOSAuthCurrentAccount().getAccountname();
             hibernateSession = Globals.createSosHibernateStatelessConnection(API_CALL);
             dbLayer = new DBLayerDeploy(hibernateSession);
@@ -80,22 +81,22 @@ public class RevokeImpl extends JOCResourceImpl implements IRevoke {
             if (deployConfigsToRevoke != null && !deployConfigsToRevoke.isEmpty()) {
                 depHistoryDBItemsToRevoke = dbLayer.getFilteredDeploymentHistoryToDelete(deployConfigsToRevoke);
                 if (depHistoryDBItemsToRevoke != null && !depHistoryDBItemsToRevoke.isEmpty()) {
-                    Map<String, List<DBItemDeploymentHistory>> grouped = depHistoryDBItemsToRevoke.stream()
-                            .collect(Collectors.groupingBy(DBItemDeploymentHistory::getPath));
-                    depHistoryDBItemsToRevoke = grouped.keySet().stream().map(item -> grouped.get(item)).flatMap(List::stream).collect(Collectors.toList());
+                    Map<String, List<DBItemDeploymentHistory>> grouped = depHistoryDBItemsToRevoke.stream().collect(Collectors.groupingBy(
+                            DBItemDeploymentHistory::getPath));
+                    depHistoryDBItemsToRevoke = grouped.keySet().stream().map(item -> grouped.get(item)).flatMap(List::stream).collect(Collectors
+                            .toList());
                 }
             }
             // collect Items for set of folders
-            List<DBItemDeploymentHistory> itemsFromFolderToRevoke = new ArrayList<DBItemDeploymentHistory>();
+            Stream<DBItemDeploymentHistory> itemsFromFolderToRevoke = Stream.empty();
             for (String controllerId : controllerIds) {
                 if (!foldersToRevoke.isEmpty()) {
-                    foldersToRevoke.stream()
-                    .map(folder -> dbLayer.getLatestDepHistoryItemsFromFolder(folder.getPath(), controllerId, folder.getRecursive()))
-                    .forEach(itemsList -> itemsFromFolderToRevoke.addAll(itemsList));
+                    itemsFromFolderToRevoke = foldersToRevoke.stream().flatMap(folder -> dbLayer.getLatestDepHistoryItemsFromFolder(folder.getPath(),
+                            controllerId, folder.getRecursive()));
                 }
             }
             Map<String, List<DBItemDeploymentHistory>> itemsPerControllerToRevokeFromFolder = 
-                    itemsFromFolderToRevoke.stream().collect(Collectors.groupingBy(DBItemDeploymentHistory::getControllerId));
+                    itemsFromFolderToRevoke.collect(Collectors.groupingBy(DBItemDeploymentHistory::getControllerId));
             Date collectingItemsFinished = Date.from(Instant.now());
             LOGGER.trace("*** collecting items finished ***" + collectingItemsFinished);
             // Delete from all allowed controllers from filter
@@ -120,10 +121,12 @@ public class RevokeImpl extends JOCResourceImpl implements IRevoke {
                                 .collect(Collectors.toList()));
                     }
                 }
-                Map<Boolean, List<DBItemDeploymentHistory>> allItemsToDelete = filteredDepHistoryItemsToRevoke.stream()
-                        .collect(Collectors.groupingBy(fos -> DeployType.FILEORDERSOURCE.equals(fos.getTypeAsEnum())));
-                DeleteDeployments.storeNewDepHistoryEntriesForRevoke(dbLayer, allItemsToDelete.get(true), commitIdForRevokeFileOrderSources, dbAuditlog.getId(), account);
-                DeleteDeployments.storeNewDepHistoryEntriesForRevoke(dbLayer, allItemsToDelete.get(false), commitIdForRevoke, dbAuditlog.getId(), account);
+                Map<Boolean, List<DBItemDeploymentHistory>> allItemsToDelete = filteredDepHistoryItemsToRevoke.stream().collect(Collectors.groupingBy(
+                        fos -> DeployType.FILEORDERSOURCE.equals(fos.getTypeAsEnum())));
+                DeleteDeployments.storeNewDepHistoryEntriesForRevoke(dbLayer, allItemsToDelete.get(true), commitIdForRevokeFileOrderSources,
+                        controllerId, dbAuditlog.getId(), account);
+                DeleteDeployments.storeNewDepHistoryEntriesForRevoke(dbLayer, allItemsToDelete.get(false), commitIdForRevoke, controllerId, dbAuditlog
+                        .getId(), account);
                 itemsToRevokePerController.put(controllerId, filteredDepHistoryItemsToRevoke);
             }
             // loop 2: send commands to controllers
